; ModuleID = '/home/carl/AnghaBench/linux/tools/bpf/extr_bpf_dbg.c_init_shell.c'
source_filename = "/home/carl/AnghaBench/linux/tools/bpf/extr_bpf_dbg.c_init_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"%s/.bpf_dbg_history\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"HOME\00", align 1
@rl_instream = common dso_local global i32* null, align 8
@rl_outstream = common dso_local global i32* null, align 8
@.str.2 = private unnamed_addr constant [8 x i8] c"bpf_dbg\00", align 1
@rl_readline_name = common dso_local global i8* null, align 8
@.str.3 = private unnamed_addr constant [5 x i8] c"TERM\00", align 1
@rl_terminal_name = common dso_local global i8* null, align 8
@rl_catch_signals = common dso_local global i64 0, align 8
@rl_catch_sigwinch = common dso_local global i32 0, align 4
@shell_completion = common dso_local global i32 0, align 4
@rl_attempted_completion_function = common dso_local global i32 0, align 4
@rl_complete = common dso_local global i32 0, align 4
@emacs_meta_keymap = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [17 x i8] c"%s/.bpf_dbg_init\00", align 1
@SIGINT = common dso_local global i32 0, align 4
@intr_shell = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @init_shell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_shell(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca [128 x i8], align 16
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %7 = call i8* @getenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 @snprintf(i8* %6, i32 128, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %7)
  %9 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %10 = call i32 @read_history(i8* %9)
  %11 = load i32*, i32** %3, align 8
  store i32* %11, i32** @rl_instream, align 8
  %12 = load i32*, i32** %4, align 8
  store i32* %12, i32** @rl_outstream, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8** @rl_readline_name, align 8
  %13 = call i8* @getenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  store i8* %13, i8** @rl_terminal_name, align 8
  store i64 0, i64* @rl_catch_signals, align 8
  store i32 1, i32* @rl_catch_sigwinch, align 4
  %14 = load i32, i32* @shell_completion, align 4
  store i32 %14, i32* @rl_attempted_completion_function, align 4
  %15 = load i32, i32* @rl_complete, align 4
  %16 = call i32 @rl_bind_key(i8 signext 9, i32 %15)
  %17 = load i32, i32* @rl_complete, align 4
  %18 = load i32, i32* @emacs_meta_keymap, align 4
  %19 = call i32 @rl_bind_key_in_map(i8 signext 9, i32 %17, i32 %18)
  %20 = load i32, i32* @rl_complete, align 4
  %21 = load i32, i32* @emacs_meta_keymap, align 4
  %22 = call i32 @rl_bind_key_in_map(i8 signext 27, i32 %20, i32 %21)
  %23 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %24 = call i8* @getenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %25 = call i32 @snprintf(i8* %23, i32 128, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0), i8* %24)
  %26 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %27 = call i32 @rl_read_init_file(i8* %26)
  %28 = call i32 @rl_prep_terminal(i32 0)
  %29 = call i32 (...) @rl_set_signals()
  %30 = load i32, i32* @SIGINT, align 4
  %31 = load i32, i32* @intr_shell, align 4
  %32 = call i32 @signal(i32 %30, i32 %31)
  ret void
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i8* @getenv(i8*) #1

declare dso_local i32 @read_history(i8*) #1

declare dso_local i32 @rl_bind_key(i8 signext, i32) #1

declare dso_local i32 @rl_bind_key_in_map(i8 signext, i32, i32) #1

declare dso_local i32 @rl_read_init_file(i8*) #1

declare dso_local i32 @rl_prep_terminal(i32) #1

declare dso_local i32 @rl_set_signals(...) #1

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
